first draft of the osier chapter

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -2,13 +2,13 @@
 \chapter{Literature Review}
 \label{chapter:lit-review}
 
-\textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
-a paragraph describing a third type of uncertainty: Normative uncertainty 
-\cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
-earlier when I talk about the ``technical solutions'' to climate change (and why
-there are so many potential solutions, but little agreement). This will support
-the following chapter/section about the conceptual framework of modeling. ``How
-can modelers change to accommodate this new understanding of decision making?''}
+% \textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
+% a paragraph describing a third type of uncertainty: Normative uncertainty 
+% \cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
+% earlier when I talk about the ``technical solutions'' to climate change (and why
+% there are so many potential solutions, but little agreement). This will support
+% the following chapter/section about the conceptual framework of modeling. ``How
+% can modelers change to accommodate this new understanding of decision making?''}
 
 
 % \input{2-literature/20-literature}
@@ -17,13 +17,13 @@ can modelers change to accommodate this new understanding of decision making?''}
 
 
 \chapter{Benchmark Results}
-\label{chapter:benchmark-results}
+% \label{chapter:benchmark-results}
 
-\textcolor{red}{This chapter will remain largely unchanged except for maybe one
-additional example, demonstrating a different dispatch model that is much faster
-but less robust. This new dispatch model will be used in the following chapter
-where I investigate further examples including a hypothetical ``data center''
-and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
+% \textcolor{red}{This chapter will remain largely unchanged except for maybe one
+% additional example, demonstrating a different dispatch model that is much faster
+% but less robust. This new dispatch model will be used in the following chapter
+% where I investigate further examples including a hypothetical ``data center''
+% and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
 \section{Exercise 0: Deciding Among Evolutionary Algorithms}
 
