--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -124,11 +124,11 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % hundred doctoral students\ldots.
 % \end{abstract}
 
-\begin{dedication}
-[F]or the kids like me who got ADHD.
+% \begin{dedication}
+% [F]or the kids like me who got ADHD.
 
-\hspace{4em} --- Joyner Lucas, ``Isis''
-\end{dedication}
+% \hspace{4em} --- Joyner Lucas, ``Isis''
+% \end{dedication}
 
 % \begin{acknowledgments}   
 % People to acknowledge
