--- a/docs/3-osier/30-intro.tex
+++ b/docs/3-osier/30-intro.tex
@@ -17,27 +17,11 @@ Technology data, objectives, constraints, and a dispatch model are all features
 within \ac{osier}, while \ac{pymoo} drives the optimization of these objectives.
 The dispatch model is independently executable for inspecting specific test
 cases and mapping solutions from other solvers onto \ac{osier}'s objective
-space. The next section elaborates on the dispatch model's formulation.
+space. The next sections elaborate on model inputs, \acfp{ga}, and the dispatch model's 
+formulation.
 
-\textcolor{red}{This chapter is mostly written but there are a few things that
-should be added.}
-
-\textcolor{red}{\begin{enumerate}
-    \item Update to the \ac{mga} algorithm.
-    \item Add description of the ``greedy'' farthest-first traversal algorithm.
-    \item Move the description of \ac{pygen} and \ac{temoa} to either a
-    different section or a different chapter since those pieces do not belong to
-    \ac{osier} itself.
-    \item Add a description of the ``simplified approach'' to capacity expansion
-    that will be added to the model and used the example chapter.
-    \item Remove the description of model data.
-    \item Add a description of the hypothetical \ac{osier} procedure, as
-    proposed in the prelim.
-\end{enumerate}}
-
-
-
-
+% \textcolor{red}{This chapter is mostly written but there are a few things that
+% should be added.}
 
 \input{3-osier/31-inputs}
 \input{3-osier/32-genetic-algorithms}
