--- a/docs/3-osier/34-mga.tex
+++ b/docs/3-osier/34-mga.tex
@@ -1,9 +1,11 @@
 \section{\acs{mga} with \acl{moo}}
 \label{section:mga-moo}
 
-\textcolor{red}{This section talks about handling ``structural uncertainty'' with \ac{osier}.}
-
-
+\ac{osier} addresses structural uncertainty in two ways. First, it uses 
+\ac{moo} to identify tradeoffs. Second, since structural uncertainty will
+persist regardless of the number of modeled objectives, \ac{osier} offers
+a high-dimensional version of the classic \ac{mga} approach to handling
+structural uncertainty.
 This thesis applies some ideas from \ac{mga} to the analysis of the sub-optimal
 space from a \acl{moo} problem. Due to their iterative process, \acp{ga}
 naturally generate many samples in a problem's feasible space. However, this
@@ -30,23 +32,23 @@ developed in this thesis to search the near-feasible space is the following:
         \item above all of the coordinates for at least one point on the Pareto
         front.
     \end{itemize}  
-    \item Lastly, the set of interior points may be sampled either randomly or with a
-    farthest-first-traversal algorithm to restrict the number of analyzed solutions.
+    \item Lastly, the set of interior points may be sampled either randomly or
+    with a farthest-first-traversal algorithm to restrict the number of analyzed
+    solutions.
 \end{enumerate}
 \noindent
-Figure \ref{fig:nd-mga} and Figure \ref{fig:3d-mga} show ``near-feasible fronts''
-and interior points with 10 percent slack for a 2-D and 3-D Pareto front, respectively. 
-Figure
-\ref{fig:nd-mga} shows clearly that only points within the near-optimal space
-(gray) are considered. Illustrating this behavior in three dimensions (and
-above) is considerably more difficult. The 3-D interior points should be covered
-by both surfaces, obstructing their view. Figure \ref{fig:3d-mga} shows that
-this is the case in three panels. First, a top view of an opaque Pareto front
-(green) where no interior points can be observed. Second, the same view with a
-translucent Pareto front, revealing interior points and the near-optimal front
-(blue). Finally, the view from underneath the near-optimal front once again
-obscures the interior points, except for two near the edges of the sub-optimal
-space. The tested points are omitted for clarity.
+Figure \ref{fig:nd-mga} and Figure \ref{fig:3d-mga} show ``near-feasible
+fronts'' and interior points with 10 percent slack for a 2-D and 3-D Pareto
+front, respectively. Figure \ref{fig:nd-mga} shows clearly that only points
+within the near-optimal space (gray) are considered. Illustrating this behavior
+in three dimensions (and above) is considerably more difficult. The 3-D interior
+points should be covered by both surfaces, obstructing their view. Figure
+\ref{fig:3d-mga} shows that this is the case in three panels. First, a top view
+of an opaque Pareto front (green) where no interior points can be observed.
+Second, the same view with a translucent Pareto front, revealing interior points
+and the near-optimal front (blue). Finally, the view from underneath the
+near-optimal front once again obscures the interior points, except for two near
+the edges of the sub-optimal space. The tested points are omitted for clarity.
 
 \begin{figure}[h]
   \centering
@@ -59,20 +61,39 @@ space. The tested points are omitted for clarity.
 \begin{figure}[H]
   \centering
   \resizebox{1\columnwidth}{!}{\input{figures/3d-mga-paretofront.pgf}}
-  \caption{From left to right: An opaque Pareto front; a translucent Pareto front showing the interior points above a sub-optimal front; and the sub-optimal front hiding the interior points from a different angle.}
+  \caption{From left to right: An opaque Pareto front; a translucent Pareto front 
+  showing the interior points above a sub-optimal front; and the sub-optimal front 
+  hiding the interior points from a different angle.}
   \label{fig:3d-mga}
 \end{figure}
 
 \subsection{Farthest First Traversal}
-Previous studies emphasized that a key benefit of \ac{mga} is obtaining a set of near-optimal solutions that are maximally different
-in design space.
+Previous studies emphasized that a key benefit of \ac{mga} with \ac{hsj} is
+obtaining a set of near-optimal solutions that are maximally different in design
+space \cite{decarolis_modelling_2016, yue_review_2018-1}. Instead of
+constraining a linear program to guarantee a maximally-different solution set.
+\ac{osier} implements a ``greedy'' search algorithm in decision space to find
+solutions \cite{hochbaum_best_1985}. The algorithm is
+\begin{enumerate}
+  \item Calculate a distance matrix $\mathcal{D}$ containing the distances among
+  all points. 
+  \item Choose an initial point (either randomly or a specified point).
+  \item Step towards the point that has the maximum distance from the current
+  point that has not already been visited.
+  \item Continue until the desired number of points has been reached.
+\end{enumerate}
 
-Figure \ref{fig:mga-fft} demonstrates \ac{mga} with ``farthest-first-traversal.'' The left plot in Figure \ref{fig:mga-fft} shows the objective space for the same problem as in Figure \ref{fig:nd-mga}. The plot on the right shows the design
-space for same problem. Both plots show the Pareto front as red dots. The 
+Figure \ref{fig:mga-fft} demonstrates \ac{mga} with
+``farthest-first-traversal.'' The left plot in Figure \ref{fig:mga-fft} shows
+the objective space for the same problem as in Figure \ref{fig:nd-mga}. The plot
+on the right shows the design space for same problem. Both plots show the Pareto
+front as red dots. The colored dots represent the points selected by the ``farthest-first-traversal''
+algorithm. These points are connected by similarly colored arrows in the design space plot. The arrow
+color corresponds to the color of the next selected point (i.e., the next farthest point).
 
 \begin{figure}[H]
   \centering
   \resizebox{1\columnwidth}{!}{\input{figures/mga-fft-example.pgf}}
-  \caption{Shows the objective and design spaces for the problem.}
+  \caption{Demonstrates the ``farthest-first-traversal'' algorithm with an example problem.}
   \label{fig:mga-fft}
 \end{figure}
