--- a/docs/3-osier/35-limitations.tex
+++ b/docs/3-osier/35-limitations.tex
@@ -1,9 +1,30 @@
 \section{Limitations of \ac{osier}}
 
-This section describes some of the limitations in \ac{osier}'s modeling details
-and scope. For example, \ac{osier} does not model interactions between the
-environment and the energy system. It also does not include a way to model the
-effect of carbon emissions and/or any kind of climate forcing from heat-trapping
-emissions nor any kind of geoengineering measures.
+Although \ac{osier} is the first \ac{esom} to allow arbitrary multi-objective
+optimization it still has some limitations. This section describes some of the limitations in \ac{osier}'s modeling details
+and scope.
 
-This responds to some of Cliff's comments on \ac{osier}.
+\begin{enumerate}
+    \item \ac{osier} has a limited time horizon and is not currently set up to
+    optimize multiple decades into the future.
+    \item \ac{osier} does not model interactions between the environment and the
+    energy system. Therefore, temperature feedbacks and geoengineering
+    technologies cannot be modeled adequately. Although, \ac{osier} could handle
+    a negative emissions technology.
+    \item Currently, \ac{osier}'s dispatch models can only model one energy carrier. That is, technologies
+    could produce heat (measured in MW$_{th}$) or electricity. But there is no method
+    to convert between the two endogenously.
+    \item There is no concept of transmission or distribution within \ac{osier}'s dispatch
+    models. 
+    \item Demand for energy is treated as perfectly inelastic. Therefore, \ac{osier} cannot model 
+    optional or deferrable loads.
+    \item Ancillary services, capacity auctions, and other markets are not included in \ac{osier}. The dispatch
+    model is strictly day-ahead or real time for the \ac{lp} and hierarchical formulations respectively.
+\end{enumerate}
+
+Many of these limitations are due to the underlying dispatch model. These limitations could be addressed 
+by coupling \ac{osier}'s genetic algorithm to an external dispatch model, such as \ac{pypsa} or \ac{temoa}.
+Other features, such as geoengineering and environmental interactions, are much more challenging to enclose.
+Avenues of future work are detailed in Section \ref{section:future-work}.
+
+% This responds to some of Cliff's comments on \ac{osier}.
