--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -57,3 +57,4 @@
 \acro{mca}[MCA]{municipal choice aggregation}
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
 \acro{ppa}[PPA]{power purchase agreement}
+\acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
