minor grammar updates to osier chapter

--- a/docs/3-osier/31-inputs.tex
+++ b/docs/3-osier/31-inputs.tex
@@ -80,8 +80,8 @@ minimized or maximized.
 
 Some quantities of interest depend on the \textit{amount of energy produced} by
 each technology. For example, carbon emissions only occur when a coal or natural
-gas plant burns fuel. A general energy density may be in $\text{MWh} /
-\text{unit}$. The objective function for these quantities reads
+gas plant burns fuel. A general energy density may be in $\text{unit}/\text{MWh}$. 
+The objective function for these quantities reads
 \begin{align}
     \mathcal{E} &= \sum_g^G \xi_g \sum_t^T x_{g,t},
     \intertext{where}
