--- a/docs/3-osier/35-limitations.tex
+++ b/docs/3-osier/35-limitations.tex
@@ -9,8 +9,8 @@ and scope.
     optimize multiple decades into the future.
     \item \ac{osier} does not model interactions between the environment and the
     energy system. Therefore, temperature feedbacks and geoengineering
-    technologies cannot be modeled adequately. Although, \ac{osier} could handle
-    a negative emissions technology.
+    technologies cannot be modeled adequately. 
+    % Although, \ac{osier} could handle a negative emissions technology.
     \item Currently, \ac{osier}'s dispatch models can only model one energy carrier. That is, technologies
     could produce heat (measured in MW$_{th}$) or electricity. But there is no method
     to convert between the two endogenously.
