--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -5,7 +5,7 @@
 \acro{eroi}[EROI]{energy return on investment}
 \acro{milp}[MILP]{mixed-integer linear programming}
 \acrodefplural{milp}[MILPs]{mixed-integer linear programs}
-\acro{osier}[\texttt{Osier}]{Open source multi-objective energy system framework}
+\acro{osier}[\texttt{Osier}]{Open-source multi-objective energy system framework}
 \acro{dapl}[DAPL]{Dakota Access Pipeline}
 \acro{temoa}[\texttt{Temoa}]{Tools for Energy Model Optimization and Analysis}
 \acro{pygen}[\texttt{PyGenesys}]{Python for Generating Energy Systems}
