--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -25,52 +25,52 @@
 % where I investigate further examples including a hypothetical ``data center''
 % and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
-\section{Exercise 0: Deciding Among Evolutionary Algorithms}
+% \section{Exercise 0: Deciding Among Evolutionary Algorithms}
 
-\textit{Already written in prelim document.}
+% \textit{Already written in prelim document.}
 
-\section{Exercise 1: Exploring objective space}
+% \section{Exercise 1: Exploring objective space}
 
-\textit{Already written in prelim document.}
+% \textit{Already written in prelim document.}
 
-\section{Exercise 2: Four Simultaneous Objectives}
+% \section{Exercise 2: Four Simultaneous Objectives}
 
-\textit{Already written in prelim document.}
+% \textit{Already written in prelim document.}
 
-\section{Exercise 3: Validating a Simplified Approach}
+% \section{Exercise 3: Validating a Simplified Approach}
 
-\textcolor{red}{This section is new in the dissertation.}
+% \textcolor{red}{This section is new in the dissertation.}
 
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
 
-\textcolor{red}{This chapter is entirely new to this thesis!}
+% \textcolor{red}{This chapter is entirely new to this thesis!}
 
-\section{Example 1: Updating the \ac{set}}
+% \section{Example 1: Updating the \ac{set}}
 
-\subsection{Overview of the Nuclear Fuel Cycle}
+% \subsection{Overview of the Nuclear Fuel Cycle}
 
-\subsection{What is the \ac{set}?}
+% \subsection{What is the \ac{set}?}
 
-\subsection{What metrics are available?}
+% \subsection{What metrics are available?}
 
-\subsection{Data for the simulation}
+% \subsection{Data for the simulation}
 
-\subsection{Results}
+% \subsection{Results}
 
-\subsection{Discussion}
+% \subsection{Discussion}
 
-\section{Example 2: Powering a Data Center}
+% \section{Example 2: Powering a Data Center}
 
-\subsection{Why data centers?}
+% \subsection{Why data centers?}
 
-\subsection{What technology options exist?}
+% \subsection{What technology options exist?}
 
-\subsection{Data for the simulation}
+% \subsection{Data for the simulation}
 
-\subsection{Results}
+% \subsection{Results}
 
-\subsection{Discussion}
+% \subsection{Discussion}
 
 
 \chapter{Using modeling to enhance just outcomes}
