--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -107,8 +107,8 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \phdthesis
 \degreeyear{2025}
 \committee{
-    Research Scientist Madicken Munk, Chair\\
-    Professor Kathryn D. Huff\\
+    Associate Professor Kathryn D. Huff, Co-Chair\\
+    Assistant Professor Madicken Munk, Co-Chair\\
     Professor James F. Stubbins\\
     Professor Clifford Singer\\
     Assistant Professor McKenzie F. Johnson\\
