updates litrev chapter

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -2,18 +2,18 @@
 \chapter{Literature Review}
 \label{chapter:lit-review}
 
-% \textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
-% a paragraph describing a third type of uncertainty: Normative uncertainty 
-% \cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
-% earlier when I talk about the ``technical solutions'' to climate change (and why
-% there are so many potential solutions, but little agreement). This will support
-% the following chapter/section about the conceptual framework of modeling. ``How
-% can modelers change to accommodate this new understanding of decision making?''}
+\textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
+a paragraph describing a third type of uncertainty: Normative uncertainty 
+\cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
+earlier when I talk about the ``technical solutions'' to climate change (and why
+there are so many potential solutions, but little agreement). This will support
+the following chapter/section about the conceptual framework of modeling. ``How
+can modelers change to accommodate this new understanding of decision making?''}
 
 
-% \input{2-literature/20-literature}
+\input{2-literature/20-literature}
 
-\input{3-osier/30-intro}
+% \input{3-osier/30-intro}
 
 
 \chapter{Benchmark Results}
