--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -84,7 +84,7 @@ the policies maximize some measure of energy justice
 of detailed analyses may also be used to dismiss concerns or opposition from the
 public due to insufficient `technical expertise' \cite{johnson_dakota_2021}.
 Further, without meaningful participation from the affected public, this
-approach is further entrenches procedural injustices. To credit the energy
+approach further entrenches procedural injustices. To credit the energy
 modeling community, there is significant awareness of the importance of
 transparency and repeatability in the space \cite{decarolis_case_2012,
 pfenninger_energy_2014, pfenninger_openmod_nodate, forster_open_2022,
