updates lit rev

--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -87,7 +87,7 @@ Further, without meaningful participation from the affected public, this
 approach further entrenches procedural injustices. To credit the energy
 modeling community, there is significant awareness of the importance of
 transparency and repeatability in the space \cite{decarolis_case_2012,
-pfenninger_energy_2014, pfenninger_openmod_nodate, forster_open_2022,
+pfenninger_energy_2014, pfenninger_openmod_2022, forster_open_2022,
 hilpert_open_2018}. Yet these two goals are challenged by the computational
 resources required to run the more complex and detailed models, as well as the
 learning curve necessary to understand and modify the model inputs themselves.
@@ -102,10 +102,35 @@ computational resources to run their models. The \ac{temoa} project offers
 limited cloud computing capabilities, free of charge
 \cite{temoa_project_temoa_2023}. However, the responsibility for creating an
 input file still falls to the user, which can be overwhelming even for
-experienced modelers. Finally, it's not clear that perfectly accessible and
+experienced modelers. However, some studies investigated the potential for enhancing
+procedural justice through direct collaboration between energy modelers
+and communities themselves. The next section describes these efforts.
+
+
+Finally, it's not clear that perfectly accessible and
 transparent modeling tools will translate to more procedurally just
 policy-making. The next section outlines one method used to address this
 challenge.
+
+
+\textcolor{red}{\subsection{Hyper-local energy system modeling}}
+\textcolor{red}{To the literature review, I want to add a section discussing 
+the research on modeling at the municipal level. These papers start with the 
+following: 
+\cite{mckenna_combining_2018,johannsen_municipal_2023,ben_amer_too_2020}.}
+
+Questions to answer:
+
+\begin{enumerate}
+    \item Where have these studies been done?
+    \item What modeling methods have the studies used?
+    \item How did the researchers engage with communities?
+    \item How did the researchers and communities select certain energy portfolios?
+    \item Did the authors have any calls for action?
+    \item How is my work extending the work of this literature? Especially as it pertains to the interviews I conducted.
+\end{enumerate}
+
+
 
 \subsection{\Acl{pve}}
 
