updates justice section

--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -123,6 +123,7 @@ Questions to answer:
 
 \begin{enumerate}
     \item Where have these studies been done?
+    \item Do the researchers mention energy justice? What kinds of justice are mentioned?
     \item What modeling methods have the studies used?
     \item How did the researchers engage with communities?
     \item How did the researchers and communities select certain energy portfolios?
