first few corrections

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -25,19 +25,25 @@
 % where I investigate further examples including a hypothetical ``data center''
 % and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
-% \section{Exercise 0: Deciding Among Evolutionary Algorithms}
+% \section{Exercise 0: Demonstrating \ac{osier}}
+\textcolor{red}{This section is new in the dissertation!}
+
+This section demonstrates some of the basic features of Osier. This section should be based 
+on the examples in \ac{osier}'s documentation.
+
+% \section{Exercise 1: Deciding Among Evolutionary Algorithms}
 
 % \textit{Already written in prelim document.}
 
-% \section{Exercise 1: Exploring objective space}
+% \section{Exercise 2: Exploring objective space}
 
 % \textit{Already written in prelim document.}
 
-% \section{Exercise 2: Four Simultaneous Objectives}
+% \section{Exercise 3: Four Simultaneous Objectives}
 
 % \textit{Already written in prelim document.}
 
-% \section{Exercise 3: Validating a Simplified Approach}
+% \section{Exercise 4: Validating a Simplified Approach}
 
 % \textcolor{red}{This section is new in the dissertation.}
 
