--- a/docs/3-osier/30-intro.tex
+++ b/docs/3-osier/30-intro.tex
@@ -1,7 +1,7 @@
 \chapter{\acf{osier}}
 \label{chapter:osier}
 
-This chapter introduces \acf{osier}, a novel open-source energy system modeling
+This chapter introduces the \acf{osier}, a novel open-source energy system modeling
 framework for \acl{moo} \cite{dotson_osier_2024}. There are currently no
 \acp{esom} that enable \ac{moo} and \ac{osier} fills that gap. Figure 
 \ref{fig:osier_flow} illustrates the flow of data into and within \ac{osier}.
@@ -14,7 +14,7 @@ framework for \acl{moo} \cite{dotson_osier_2024}. There are currently no
 \end{figure}
 
 Technology data, objectives, constraints, and a dispatch model are all features
-within \ac{osier}, while \ac{pymoo} drives the optimization of these objectives.
+within \ac{osier}, while \ac{pymoo} drives the optimization of these objectives \cite{blank_pymoo_2020}.
 The dispatch model is independently executable for inspecting specific test
 cases and mapping solutions from other solvers onto \ac{osier}'s objective
 space. The next sections elaborate on model inputs, \acfp{ga}, and the dispatch model's 
