--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -58,3 +58,5 @@
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
 \acro{ppa}[PPA]{power purchase agreement}
 \acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
+\acro{lib}[LiB]{lithium-ion battery}
+\acrodefplural{lib}[LiBs]{lithium-ion batteries}
