--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -50,21 +50,47 @@ on the examples in \ac{osier}'s documentation.
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
 
-% \textcolor{red}{This chapter is entirely new to this thesis!}
+\textcolor{red}{This chapter is entirely new to this thesis!}
 
-% \section{Example 1: Updating the \ac{set}}
+\section{Example 1: Updating the \ac{set}}
 
-% \subsection{Overview of the Nuclear Fuel Cycle}
+\textcolor{red}{Points to hit:}
+\begin{enumerate}
+    \item Addressing the climate crisis requires new infrastructure and new energy sources.
+    \item Progress has been stifled on many fronts, not the least of which has been public opposition to energy projects. Including wind, solar, and nuclear.
+    \item Some of this opposition results from dissatisfaction with process.
+    \item Opposition can be pre-empted with sincere and proactive community engagement.
+    \item In the case of nuclear energy, some of these efforts are already underway with concepts such as consent-based siting entering the nuclear zeitgeist.
+    \item ???
+    \item Introduce the \ac{set} tool
+    \item  Introduce \ac{osier} as a tool for multi-objective optimization.
+\end{enumerate}
 
-% \subsection{What is the \ac{set}?}
+\textcolor{red}{Benefits of using \ac{osier}}:
+\begin{enumerate}
+    \item Python interface allows direct coupling with external models and data sources for greater flexibility.
+    \item Enables, but does not require, a weighting scheme for decision making.
+    \item Allows users to analyze tradeoffs among competing objectives.
+    \item Allows users to compare lifecycle impacts with non-nuclear technologies.
+    \item Can flexibly add additional assessment criteria (e.g., Energy return on investment). 
+\end{enumerate}
 
-% \subsection{What metrics are available?}
+\textcolor{red}{Results}
+\begin{enumerate}
+    \item Does using \ac{osier} support the previous conclusions about the most promising evaluation groups?
+\end{enumerate}
 
-% \subsection{Data for the simulation}
+\subsection{Overview of the Nuclear Fuel Cycle}
 
-% \subsection{Results}
+\subsection{What is the \ac{set}?}
 
-% \subsection{Discussion}
+\subsection{What metrics are available?}
+
+\subsection{Data for the simulation}
+
+\subsection{Results}
+
+\subsection{Discussion}
 
 % \section{Example 2: Powering a Data Center}
 
