finishes handling comments from @katyhuff review

--- a/docs/3-osier/35-limitations.tex
+++ b/docs/3-osier/35-limitations.tex
@@ -5,8 +5,9 @@ optimization it still has some limitations. This section describes some of the l
 and scope.
 
 \begin{enumerate}
-    \item \ac{osier} has a limited time horizon and is not currently set up to
-    optimize multiple decades into the future.
+    \item \ac{osier} is currently limited to optimizing a single future year.
+    \item Capacity expansion currently assumes ``green-field'' construction and
+    may not respect existing capacity.
     \item \ac{osier} does not model interactions between the environment and the
     energy system. Therefore, temperature feedbacks and geoengineering
     technologies cannot be modeled adequately. 
