--- a/docs/3-osier/33-dispatch-model.tex
+++ b/docs/3-osier/33-dispatch-model.tex
@@ -19,25 +19,24 @@ sub-optimal compared to the \ac{lp} formulation.
     \label{eq:dispatch-objective}
     &\left(\sum_t^T\sum_g^G \left[C_{g,t}^{fuel} + C_{g,t}^{vom}\right]x_{g,t}
     \right)+\left(\sum_t^T\sum_g^S x_{g,t}c_{g,t}\pi\right)\\
-    \intertext{such that,}
-    \intertext{1. The generation meets demand, less the amount of energy stored or curtailed, 
+    \intertext{such that generation meets demand, less the amount of energy stored or curtailed, 
     within a user-specified tolerance (undersupply and oversupply),}
     \left[\sum_g^Gx_{g,t}-\sum_g^S c_{g,t}\right] &\geq \left(1-\text{undersupply}\right)\text{D}_t\quad \forall \quad t \in T, S, \\
     \left[\sum_g^Gx_{g,t}-\sum_g^S c_{g,t}\right] &\leq \left(1+\text{oversupply}\right)\text{D}_t \quad \forall \quad t \in T, S,
-    \intertext{2. A generator's production, $x_{g}$ does not exceed its capacity at any time, $t$}
+    \intertext{a generator's production, $x_{g}$ does not exceed its capacity at any time, $t$}
     x_{g,t} &\leq \textbf{CAP}_{g}\Delta \tau \quad \forall \quad g,t \in G,T
-    \intertext{3. A generator's ramping rate is never exceeded,}
+    \intertext{a generator's ramping rate is never exceeded,}
     \frac{x_{r,t} - x_{r,t-1}}{\Delta \tau} = \Delta P_{r,t} &\leq
         \rho^{up}_g\textbf{CAP}_g\Delta\tau \quad \forall \quad r,t
         \in R, T,\\
     \frac{x_{r,t} - x_{r,t-1}}{\Delta \tau} = \Delta P_{r,t} &\leq
         -\rho^{down}_g\textbf{CAP}_g\Delta\tau \quad \forall \quad r,t
         \in R, T,
-    \intertext{4. Storage capacity for each storage technology is never exceeded}
+    \intertext{storage capacity for each storage technology is never exceeded}
     \textbf{SOC}_{s,t} &\leq \textbf{CAP}^S_{s} \quad \forall \quad s,t \in S,T,
-    \intertext{5. Storage discharge cannot exceed stored energy.}
+    \intertext{storage discharge cannot exceed stored energy.}
     x_{s,t} &\leq \textbf{SOC}_{s,t} \quad \forall \quad s,t \in S,T,
-    \intertext{6. Storage charge rate cannot exceed unit capacity}
+    \intertext{storage charge rate cannot exceed unit capacity}
     c_{s,t} &\leq \textbf{CAP}_{s}\Delta \tau \quad \forall \quad s,t \in S,T,
     \intertext{where,}
     G &= \text{ the set of all generating technologies},\nonumber\\
@@ -128,8 +127,8 @@ extends Equation \ref{eq:std_tech_output} by checking that the storage unit has 
 Since this algorithm is myopic, solution optimality is not guaranteed. Higher
 penetration of renewable energy and energy storage increases the influence of
 this myopia due to the unpredictability of these resources. Thus, this approach
-may be more ``realistic'' than an truly optimal dispatch. Additionally, this
-method is faster from reduced problem setup. Section
+may be more ``realistic'' than an truly optimal dispatch (e.g., as a ``real-time'' dispatch model). 
+Additionally, this method is faster from reduced problem setup. Section
 \ref{section:dispatch_benchmark} demonstrates these differences. Figure 
 \ref{fig:hierarchy_algorithm} illustrates the flow of the algorithm.
 
