--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -2,34 +2,135 @@
 \chapter{Literature Review}
 \label{chapter:lit-review}
 
-% \textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
-% a paragraph describing a third type of uncertainty: Normative uncertainty 
-% \cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
-% earlier when I talk about the ``technical solutions'' to climate change (and why
-% there are so many potential solutions, but little agreement). This will support
-% the following chapter/section about the conceptual framework of modeling. ``How
-% can modelers change to accommodate this new understanding of decision making?''}
+% \textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add
+% a paragraph describing a third type of uncertainty: Normative uncertainty
+% \cite{taebi_governing_2020}. I might want to allude to this type of
+% uncertainty earlier when I talk about the ``technical solutions'' to climate
+% change (and why there are so many potential solutions, but little agreement).
+% This will support the following chapter/section about the conceptual framework
+% of modeling. ``How can modelers change to accommodate this new understanding
+% of decision making?''}
 
 
 % \input{2-literature/20-literature}
 
-\input{3-osier/30-intro}
+\chapter{Modeling and Uncertainty: Theory}
+
+\textcolor{red}{This chapter is new in the dissertation! This is where I will handle 
+Denia's comments about being clear on my normative stances.}
+
+\textcolor{red}{The argument advanced in this chapter is that the practice of modeling
+involves iteratively addressing three types of uncertainties. In the chapter I will
+describe these types of uncertainties and the phases they represent.}
+
+\section{Parametric uncertainty}
+
+\section{Structural uncertainty}
+
+\section{On normative uncertainty}
+In \acp{esom}, non-physical constraints are often introduced to direct the model
+towards a desired outcome. For example, carbon emissions are often constrained
+to identify a least cost pathway to achieving a specified emissions target by a
+certain date. If the models results are subsequently used to support policies
+that advance society towards that emissions target, then the modeled constraint
+represents a normative position. That society \textit{should} pursue this goal.
+In the case of carbon emissions, this is frequently stated outright (cite some
+papers that do this?). There are other constraints that researchers sometimes
+apply which might be construed as a normative position but go unstated and
+unsupported. Thus, introducing \textit{normative uncertainty}. Normative
+uncertainty, that uncertainty which arises from the existence of a plurality of
+equally good alternatives, is seldom discussed in the literature (cite?).
+\textcolor{red}{Can I say precisely how many papers discuss normative
+uncertainty? If it's a small number, perhaps I can just state it.}
+
+In modeling practice, normative uncertainty shows up when there are weakly
+justified inputs. For example, constraining a model to building only a certain
+amount of capacity for a particular technology because the results would be
+otherwise ``unbelievable.'' There are good reasons to include such build limits.
+If you're modeling a region with an explicit policy ban on a technology, or if
+there is simply not enough land area to support an unlimited capacity of
+renewable energy resources. In these cases, it makes sense to constrain a
+technology's capacity to its \textit{technical potential.} Citing believability,
+however, represents a normative uncertainty because there are infinitely many
+narrative possibilities to explain a particular capacity constraint. For
+concreteness, consider an \ac{esom} with a nuclear reactor technology and an
+accompanying capacity constraint. There are myriad reasons to limit the
+technical potential for nuclear capacity, including geography, politics (e.g., a
+nuclear moratorium), and resource availability. However, limiting the capacity
+of a nuclear technology because the results would otherwise show an
+``unbelievable'' amount of nuclear capacity introduces a confounding normative
+uncertainty. This should be avoided for at least four reasons.
+\begin{enumerate}
+    \item If limiting nuclear energy is a policy objective then artificially
+    constraining the model's investment in nuclear may inadvertently lead to
+    more nuclear capacity in the real world because the \ac{esom} modeled a
+    policy environment that was actually beneficial to nuclear energy.
+    \item Conventional \acp{esom} minimze system cost, limiting the buildout of
+    nuclear energy is, at best, a non-binding constraint, and at worst increases
+    the value of the objective function, creating an illusion of a ``least
+    cost'' solution.
+    \item If my goal is to inform a policy or set of policies that lead to a
+    particular outcome, such as reducing carbon emissions, a constraint that
+    increases the objective value might make the desired outcome economically
+    unappealing. 
+    \item Limiting the capacity obfuscates the policy changes that might be
+    needed to achieve a desired future.
+    \item Existence of such a constraint invites dismissal of the entire
+    modeling endeavor via Hitchens' Razor: What can be asserted without evidence
+    can be dismissed without evidence.
+    \item In a multi-objective model, an unjustified build limit reduces the
+    efficacy of tradeoff analysis.
+\end{enumerate}
+
+It is best to state and defend a normative position (e.g., "Nuclear energy is
+undesirable, here is why") than introduce normative uncertainty.
+\textcolor{red}{Using a tool like \ac{osier} reduces normative uncertainty
+because it forces modelers and decisionmakers to confront their normative
+positions in tradeoff analysis. Choosing a particular solution among a set of
+co-optimal solutions requires articulating why one solution is preferable to
+another and lays bare the question of personal values.}
+
+Some normative positions of this thesis are:
+\begin{enumerate}
+    \item Reducing carbon emissions is paramount.
+    \item Technology agnostic: Models will not artificially favor any particular technology.
+    \item Policy outcomes are better when more diverse voices are included in the process.
+\end{enumerate}
+
+\section{Modeling phases}
+
+\subsection{Pre-descriptive}
+
+Link between normative and parametric uncertainties. Normative decisions (i.e., assumptions)
+are made about different model parameters. Along with which technologies are represented.
+
+\subsection{Descriptive}
+Link between parametric and structural. This is where the ``modeling'' happens. Constraints
+and objectives give a model its descriptive power.
+
+\subsection{Prescriptive}
+Link between structural and normative. Model results are interpreted and policy outcomes
+are prescribed. Alternatively, researchers may start the cycle anew by using the model
+results to adjust the normative assumptions. Perhaps because the model results don't show
+a desirable future?
+
+% \input{3-osier/30-intro}
 
 
 \chapter{Benchmark Results}
 % \label{chapter:benchmark-results}
 
-% \textcolor{red}{This chapter will remain largely unchanged except for maybe one
-% additional example, demonstrating a different dispatch model that is much faster
-% but less robust. This new dispatch model will be used in the following chapter
-% where I investigate further examples including a hypothetical ``data center''
-% and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
+% \textcolor{red}{This chapter will remain largely unchanged except for maybe
+% one additional example, demonstrating a different dispatch model that is much
+% faster but less robust. This new dispatch model will be used in the following
+% chapter where I investigate further examples including a hypothetical ``data
+% center'' and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
 % \section{Exercise 0: Demonstrating \ac{osier}}
 \textcolor{red}{This section is new in the dissertation!}
 
-This section demonstrates some of the basic features of Osier. This section should be based 
-on the examples in \ac{osier}'s documentation.
+This section demonstrates some of the basic features of Osier. This section
+should be based on the examples in \ac{osier}'s documentation.
 
 % \section{Exercise 1: Deciding Among Evolutionary Algorithms}
 
@@ -92,25 +193,25 @@ interfere with its adoption.
 
 Although I originally set out to conduct a limited case study of Chambana, I
 discovered that municipalities in Illinois do not, in general, have the decision
-making authority to make specific choices about their energy supply.
-Thus, I expanded my study to the state level; interviewing people from the
-\ac{ipa} and \ac{icc}. This expanded scope provided evidence for structural
-challenges blocking municipal influence from energy planning processes. Further,
-this evinces a tension among distributive, procedural, and recognition justice.
+making authority to make specific choices about their energy supply. Thus, I
+expanded my study to the state level; interviewing people from the \ac{ipa} and
+\ac{icc}. This expanded scope provided evidence for structural challenges
+blocking municipal influence from energy planning processes. Further, this
+evinces a tension among distributive, procedural, and recognition justice.
 
 \section{Municipal Levers: How municipalities make choices about their energy supply}
-There are generally four ways municipalities can make choices about their energy supply.
+There are generally four ways municipalities can make choices about their energy
+supply.
 
-\subsection{\ac{mca}}
-This is where municipalities participate in electricity markets on behalf of
-their residents. Although this allows municipalities to choose an energy supply
-besides the standard portfolio provided by an electric utility, municipalities
-do not have full control over their energy supply. Instead, municipalities
-negotiate for a few portfolios through a bidding process. While they can specify
-some criteria, such as a percentage of renewable energy, the specific generation
-mix depends on the company that developed the portfolio bid. Further, residents
-are still allowed to opt-out of \ac{mca} and elect the standard portfolio
-provided by their electric utility.
+\subsection{\ac{mca}} This is where municipalities participate in electricity
+markets on behalf of their residents. Although this allows municipalities to
+choose an energy supply besides the standard portfolio provided by an electric
+utility, municipalities do not have full control over their energy supply.
+Instead, municipalities negotiate for a few portfolios through a bidding
+process. While they can specify some criteria, such as a percentage of renewable
+energy, the specific generation mix depends on the company that developed the
+portfolio bid. Further, residents are still allowed to opt-out of \ac{mca} and
+elect the standard portfolio provided by their electric utility.
 
 \subsection{Utility ownership}
 Some municipalities in Illinois, such as Naperville, own their own distribution
@@ -126,8 +227,8 @@ municipality, which must procure electricity through another entity such as the
 In very few cases, a municipality may own some of its own generation. \ac{uiuc}
 owns a coal and natural gas plant, a solar array, chilled water storage, and
 participates in a \ac{ppa} to purchase wind power. More commonly, municipalities
-will lease land cheaply to a solar company, for example, and purchase some or all
-of the rights to that electricity through a \ac{ppa}. 
+will lease land cheaply to a solar company, for example, and purchase some or
+all of the rights to that electricity through a \ac{ppa}. 
 
 \subsection{Municipal-owned buildings}
 
